# Pico-MAPPO

./: .gitignore  play_with_agents.py  pyproject.toml  train_env.py
Game/: env.py  game.py  levels.py  main.py  player.py  static_obstacle.py  utils.py
Game/entities/: __init__.py  button.py  door.py  headless_rect.py  key.py
MAPPO/: actorcritic.py  ppo.py
MAPPO/networks/: actor.py
MAPPO/utils/: math.py
agent_training/: actorcritic.py  level_scheduler.py  ppo.py
scripts/: play_with_agents.py  train_env.py
