[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-mappo"  # pick a unique name
version = "0.1.0"
description = "Pico Park + multi agent proximy policy optimization training environment"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
