[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-mappo"  # pick a unique name
version = "0.1.0"
description = "Pico Park + multi agent proximy policy optimization training environment"
requires-python = ">=3.9"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "torch>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
